chore: standardize Portuguese comments and format with Prettier